# AudioRailRider

./: .gitignore  AGENTS.md  App.js  App.tsx  CODE_REVIEW.md  DEV.md  README.md  config.js  config.ts  gemini.config.js  index.html  jest.config.js  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  types.js  types.ts  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
__mocks__/: config.ts  env.ts
backend/: .env.example  README.md  main.py  package.json  pyproject.toml
backend/app/: exceptions.py  limiter.py  middleware.py
backend/app/api/: endpoints.py
backend/app/config/: environment.py  logging.py  settings.py
backend/app/models/: behavior_tree.py  enhanced_models.py  models.py  perfect_blueprint.py
backend/app/schema/: blueprint.py
backend/app/services/: advanced_blueprint_service.py  advanced_track_generator.py  audio_analysis_service.py  gemini_service.py  genai_adapter.py
backend/scripts/: check_genai_signature.py
backend/tests/: conftest.py  create_wav.py  test_audio_analysis.py  test_endpoints.py  test_gemini_service.py  test_track_generator_service.py
components/: Icon.js  Icon.tsx  Loader.tsx  ThreeCanvas.tsx
docs/: GEMINI_2.5_FLASH_IMAGE.md  GPU_SETUP.md  PRELOADING.md  RIDE_START_FIX.md  TROUBLESHOOTING.md
frontend/: .env.example  README.md  index.css  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: check_mp3.cjs  check_mp3.js  chrome-gpu-launch.sh  testAudioAnalysis.js
frontend/src/: App.tsx  config.ts  gemini.config.ts  index.tsx  regl.d.ts
frontend/test/: glsl-transformer.cjs
frontend/test-results/: .last-run.json
lib/: RideCamera.js  RideCamera.ts  SceneManager.js  SceneManager.ts  VisualEffects.js  VisualEffects.ts  audioProcessor.js  audioProcessor.ts  constants.js  constants.ts  store.js  store.ts  trackBuilder.js  trackBuilder.ts  trackValidator.js  useAudioAnalysis.js  useAudioAnalysis.ts  workflow.js  workflow.ts
scripts/: check-shaders.js  check_mp3.cjs  check_mp3.js  extract-shader-uniforms.js  fetch-lygia.sh  resolve-shaders.js  run_backend_tests.sh  sync-constants.mjs  with_venv.sh
services/: geminiService.js  geminiService.mimeTest.js  geminiService.mimeTest.ts  geminiService.ts
shared/: __init__.py  constants.json  constants.py  constants.ts  package.json  pyproject.toml  types.ts
shared/src/shared/: __init__.py
shared/types/: global.d.ts  index.d.ts  meyda.d.ts
src/: App.tsx  config.ts
(+139 files in other folders)
