[tool.poetry]
package-mode = false

[project]
name = "audiorailrider-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "myrqyry",email = "matrmx@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "google-generativeai (>=0.5.4,<0.6.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "httpx (>=0.27.0,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
