[tool.poetry]
name = "audiorailrider-shared"
version = "0.1.0"
description = "Shared types and utilities for AudioRailRider"
authors = ["AudioRailRider Team"]
packages = [{include = "shared", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
